# Anka

./: .gitignore  Almazrouei_Saif_Resume.docx  Almazrouei_Saif_Resume_New.docx  FINAL_REPORT.md  LICENSE  README.md  create_resume.py  pyproject.toml
.github/workflows/: ci.yml
anka-acl/: CONVERSION_CHECKLIST.md  anka_acl.aux  anka_acl.bbl  anka_acl.blg  anka_acl.out  anka_acl.tex  references.bib
benchmarks/: METHODOLOGY.md  __init__.py  analyze.py  analyze_failures.py  analyze_partial.py  batch_fix.py  config.yaml  dashboard.py  final_report.py  fix_all_tasks.py  full_analysis.py  generate_abstract.py  generate_tables.py  investigate_failures.py  investigate_map.py  llm_client.py  metrics.py  optimization_tracker.py  publication_stats.py  report.py  review_task.py  runner.py  runner_detailed.py  sandbox.py  schema.py  smart_runner.py  validate_tasks.py  visualizations.py  visualizations_final.py
benchmarks/figures/: abstract.txt  claims.txt  results.md  tables.tex
benchmarks/problems/: filter_001.json  filter_002.json  filter_003.json  filter_004.json  filter_005.json  filter_006.json  filter_007.json  filter_008.json  filter_009.json  filter_010.json  limit_001.json  limit_002.json  limit_003.json  limit_004.json  limit_005.json  map_001.json  map_002.json  map_003.json  map_004.json  map_005.json  map_006.json  map_007.json  map_008.json  map_009.json  map_010.json  pipeline_001.json  pipeline_002.json  pipeline_003.json  pipeline_004.json  pipeline_005.json  pipeline_006.json  pipeline_007.json  pipeline_008.json  pipeline_009.json  pipeline_010.json  select_001.json  select_002.json  select_003.json  select_004.json  select_005.json  (+11 more)
benchmarks/prompts/: __init__.py  anka_fewshot.md  anka_prompt.md  python_fewshot.md  python_prompt.md
docs/: syntax-guide.md
docs/architecture-decisions/: 001-parser-choice.md
examples/: advanced_analytics.anka  api_pipeline.anka  data.json  data_validation.anka  date_analysis.anka  file_pipeline.anka  hello.anka  math_transforms.anka  orders.anka  orders_data.json  sales_data.json  sales_report.anka  string_processing.anka
paper/: anka_paper.tex  anka_paper_simple.aux  anka_paper_simple.bbl  anka_paper_simple.blg  anka_paper_simple.out  anka_paper_simple.tex  references.bib
scripts/: prepare_arxiv.py
src/anka/: __init__.py  __main__.py  cli.py
src/anka/ast/: __init__.py  (+2 more)
tests/: __init__.py  test_codegen.py  test_complete_feature_audit.py  test_control_flow.py  test_date_ops.py  test_file_ops.py  test_http_ops.py  test_interpreter.py  test_parser.py  test_semantic.py  test_string_ops.py
tests/fixtures/: sample.csv  sample.json
tests/golden/: __init__.py
vscode-anka/: CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json
vscode-anka/snippets/: anka.json
vscode-anka/src/: extension.ts
(+113 files in other folders)
