[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anka"
version = "0.1.0"
description = "LLM-optimized DSL for data transformations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Anka Contributors" }
]
keywords = ["dsl", "llm", "data-transformation", "pandas"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
]

dependencies = [
    "lark>=1.1.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "requests>=2.28.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "responses>=0.23.0",
    "types-requests>=2.28.0",
]

[project.scripts]
anka = "anka.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/anka"
Documentation = "https://github.com/yourusername/anka#readme"
Repository = "https://github.com/yourusername/anka"
Issues = "https://github.com/yourusername/anka/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/anka"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"

[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["anka"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
mypy_path = "src"
packages = ["anka"]

[[tool.mypy.overrides]]
module = "lark.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dateutil.*"
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/anka"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
